--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "emotion": "^11.0.0",
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
