--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-svg-loader": "^3.0.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^1.1.1"
