--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.5",
     "emotion": "^11.0.0",
     "formik": "^2.2.9",
+    "nanoid": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
