--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "react-svg-loader": "^3.0.3",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.0",
