--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
-    "bootstrap": "^5.2.3",
     "emotion": "^11.0.0",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.1.0",
     "react-ellipsis-text": "^1.2.1",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
